--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,8 @@
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+file.reference.html5-public_html=public_html
+file.reference.html5-test=test
 file.reference.TrabajoGrupal-public_html=public_html
 file.reference.TrabajoGrupal-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.TrabajoGrupal-public_html}
-test.folder=${file.reference.TrabajoGrupal-test}
+site.root.folder=${file.reference.html5-public_html}
+test.folder=${file.reference.html5-test}
